tests/integration/snapshots/integration__toml__malformed_toml_syntax.snap
---
source: tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Failed to parse /tmp/.tmpoUN5or/flir.toml:
TOML parse error at line 2, column 8
  |
2 | [linter
  |        ^
unclosed table, expected `]`


----- args -----
.
